[package]
name = "disk-chan"
version = "0.2.0"
edition = "2021"
authors = ["Maxi Saparov <maxi.saparov@gmail.com>"]
description = "An on-disk, (almost) lock-free, async, mpmc channel."
documentation = "https://docs.rs/disk-chan"
homepage = "https://github.com/MostlyMaxi/disk-chan"
repository = "https://github.com/MostlyMaxi/disk-chan"
readme = "README.md"
keywords = ["ringbuffer", "queue"]
license = "MIT"
categories = ["database-implementations", "data-structures"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-wait = "1.1.0"
base62 = "2.2.1"
futures = "0.3.31"
memmap2 = "0.9.5"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
const-str = "0.6.0"
tracing-subscriber = "0.3.19"

